tests/snapshots/cli__follow_with_config@transitive_grandchild_cycle_deep_follows_2.snap
---
source: tests/cli.rs
assertion_line: 643
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/transitive_grandchild_cycle.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/transitive_grandchild_cycle.flake.lock"
    - "--config"
    - "[FIXTURES]/deep_follows_2.config.toml"
    - "--diff"
    - follow
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All inputs are already deduplicated.

----- stderr -----
