tests/snapshots/cli__follow_with_config@transitive_grandchild_shallow_follows_1.snap
---
source: tests/cli.rs
assertion_line: 680
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/transitive_grandchild.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/transitive_grandchild.flake.lock"
    - "--config"
    - "[FIXTURES]/shallow_follows_1.config.toml"
    - "--diff"
    - follow
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All inputs are already deduplicated.

----- stderr -----
